--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+<h3>Log In to Your Account</h3>
+<br>
 <div class="mb-3">
     <form method="POST">
         {{ form.hidden_tag() }}
