--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+    <h3> Join Us Today </h3>
+    <br>
     <form method="POST">
         {{ form.hidden_tag()}}
         <div class="form-group">
